feat(languages): 12 语言插件 skills/agents 全面重写对齐 Claude Code 官方规范
按 Claude Code skills/agents 官方写作规范重写 plugins/languages/ 下所有
12 语言插件 (c/cpp/csharp/flutter/golang/java/javascript/markdown/naming/
python/rust/typescript)。

主要变更:
- frontmatter 仅留官方字段, 删 user-invocable/context/memory 等非官方字段
- agent name 加语言前缀 (python-dev/golang-test ...) 防跨插件冲突
- description 全部含明确触发短语, 中英双语
- 内容更新到 2026-05 (Go 1.26/Python 3.14/TS 7/Java 25 LTS/.NET 10/
  Rust 1.85/C++23-26/Flutter 3.27/React 19 等)
- 删除 golang/commands/ 目录 + plugin.json 中 commands 字段
- 同步 README/GUIDELINES/llms.txt/docs 引用新命名
- AI 识别校验 22 项 (glm-4.7-flash), 通过 18/22, 3 项必/应改已修

落档研究:
- .trellis/tasks/05-16-languages-skills-agents/research/
  claude-code-best-practices.md
- .trellis/tasks/05-16-languages-skills-agents/research/ai-check-report.md